// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`First snapshot test 1`] = `
[
  <label
    htmlFor="department"
  >
    Department
  </label>,
  <select
    aria-label="Select option"
    className="form-select"
    id="department"
    onChange={[Function]}
    value=""
  >
    <option
      value="Sales"
    >
      Sales
    </option>
    <option
      value="Marketing"
    >
      Marketing
    </option>
    <option
      value="Engineering"
    >
      Engineering
    </option>
    <option
      value="Human Resources"
    >
      Human Resources
    </option>
    <option
      value="Legal"
    >
      Legal
    </option>
  </select>,
]
`;

exports[`Second snapshot test 1`] = `
<select
  aria-label="Select option"
  className="form-select"
  onChange={[Function]}
  value=""
>
  <option
    value="Sales"
  >
    Sales
  </option>
  <option
    value="Marketing"
  >
    Marketing
  </option>
  <option
    value="Engineering"
  >
    Engineering
  </option>
  <option
    value="Human Resources"
  >
    Human Resources
  </option>
  <option
    value="Legal"
  >
    Legal
  </option>
</select>
`;
